# CANParser

./: .gitignore  README.md
can_parser/: Cargo.toml
can_parser/src/: can_message.rs  csv_serializer.rs  error.rs  j1939_spec.rs  json_serializer.rs  lib.rs  specification.rs  sqlite_serializer.rs  utils.rs
can_parser_cli/: Cargo.toml  Makefile
can_parser_cli/src/: main.rs
can_parser_python/: Cargo.toml  pyproject.toml
can_parser_python/src/: lib.rs
can_parser_wasm/: Cargo.toml
can_parser_wasm/ignore/: README.md
can_parser_wasm/src/: lib.rs
examples/: main.py
examples/next-can-decoder/: next.config.js  package-lock.json  package.json
examples/next-can-decoder/src/components/: FileUpload.tsx
examples/next-can-decoder/src/pages/: index.tsx
examples/next-can-decoder/src/workers/: wasmWorker.js
