[package]
name = "can_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.19.1", optional = true }
regex = { version = "1.7.1", default-features = false, features = ["std", "perf"] }
serde_json = "1.0.93"
csv = "1.2.2"
rusqlite = { version = "0.29.0", features = ["bundled", "functions", "backup"], optional = true }
serde = { version="1.0.180", features = ["derive", "rc"] }
hex = "0.4.3"
pyo3 = { version = "0.19.0", features = ["serde"], optional = true }
rayon = { version = "1.7.0", optional = true }
can-dbc = "5.0.0"
wasm-bindgen = { version = "0.2.87", optional = true }
js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", features = ["console", "Performance", "Window", "WorkerGlobalScope"], optional = true }
flatten-serde-json = "0.1.0"

[features]
parallel = ["rayon"]
debug = []
xlsx = ["calamine"]
sqlite = ["rusqlite"]
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
