[package]
name = "can_parser_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
can_parser = { path = "../can_parser", features = ["debug", "wasm"] }
# wasm-bindgen-rayon = "1.0.2"
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.5.0"
# web-sys = { version = "0.3.64", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"